# oca-product

./: README.md
odoo-bringout-oca-product-configurator-product_configurator_mrp/doc/: DEPENDENCIES.md
odoo-bringout-oca-product-configurator-product_configurator_sale/doc/: DEPENDENCIES.md
odoo-bringout-oca-product-variant-product_variant_attribute_tax/: README.md  pyproject.toml
odoo-bringout-oca-product-variant-product_variant_configurator/: README.md  pyproject.toml
odoo-bringout-oca-product-variant-product_variant_default_code/: README.md  pyproject.toml
odoo-bringout-oca-product-variant-product_variant_name/: README.md  pyproject.toml
odoo-bringout-oca-product-variant-product_variant_sale_price/: README.md  pyproject.toml
odoo-bringout-oca-product-variant-product_variant_specific_description/: README.md  pyproject.toml
odoo-bringout-oca-product-variant-purchase_variant_configurator/: README.md  pyproject.toml
odoo-bringout-oca-product-variant-sale_order_line_variant_description/: README.md  pyproject.toml
odoo-bringout-oca-product-variant-sale_product_variant_attribute_tax/: README.md  pyproject.toml
odoo-bringout-oca-product-variant-sale_product_variant_attribute_tax/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-product-variant-sale_product_variant_attribute_tax/sale_product_variant_attribute_tax/i18n/: bs.po
odoo-bringout-oca-product-variant-sale_variant_configurator/: README.md  pyproject.toml
(+91 files in other folders)
